--- a/style.css
+++ b/style.css
@@ -3141,7 +3141,7 @@ button.menu-toggle[aria-expanded=true] svg.fermer-menu {
   left: 0;
   position: absolute;
   width: calc(100vw - 2 * var(--margin-x-header));
-  top: 130%;
+  top: 100%;
 }
 .nav-menu.desktop.menu-products .current-menu-item .sub-menu::after {
   background-color: var(--blanc);
@@ -3155,6 +3155,9 @@ button.menu-toggle[aria-expanded=true] svg.fermer-menu {
 @media (min-width: 1400px) {
   .nav-menu.desktop.menu-products .menu-item {
     padding-top: 1.5rem;
+  }
+  .nav-menu.desktop.menu-products.menu-products .current-menu-item .sub-menu {
+    top: 130%;
   }
 }
 .nav-menu.desktop.menu-products .sub-menu > li {
